# vocabmaker

./: .gitignore  CMakeLists.txt  LICENSE  README.md
tests/: CMakeLists.txt  main.cpp
